chapter-15/admission-control/pod-policy-validator.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: pod-policy-validator
  labels:
    component: admission-control
    type: webhook
webhooks:
- name: pod-policy.avakart.example.com
  clientConfig:
    service:
      namespace: avakart
      name: pod-policy-validator
      path: "/validate"
      port: 443
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURJVENDQWdtZ0F3SUJBZ0lVZFhCc2JHbHVZV2x6WlhKMlpYSXVZWFpoYTJGeWRETUNGUUF3RFFZSktvWkkKaHZjTkFRRUxCUUF3RHpFTk1Bc0dBMVVFQXd3RVkyVnlkREFlRncweU5EQTJNRGd4TlRJMU1EQmFGdzB5TlRBMgpNRGN4TlRJMU1EQmFNQTh4RFRBTEJnTlZCQU1NQkdObGNuUXdnZ0VpTUEwR0NTcUdTSWIzRFFFQkFRVUFBNElCCkR3QXdnZ0VLQW9JQkFRQzVPWWxGUkRJbGFWTnVlK2FPYUVwRlhOSUJFTHhEUEFpWFNZZDNIYTZEK1JFZWRXcVkKWVdpZlJTUDFBWU1VRnFMdGFqNmZQMHhxb0JmTVNBcGNDZVdUWWZPUXRxNnJZcGpkYkVKSXVSZUxaVkZTaXRXNQpVRWRXZlJHZHJkVn [...]
  rules:
  - apiGroups: [""]
    apiVersions: ["v1"]
    operations: ["CREATE", "UPDATE"]
    resources: ["pods"]
    scope: "Namespaced"
  admissionReviewVersions: ["v1"]
  sideEffects: None
  timeoutSeconds: 5
  failurePolicy: Fail
